--- a/packages/navigate-theme/src/styles/components/_banner-chartered.scss
+++ b/packages/navigate-theme/src/styles/components/_banner-chartered.scss
@@ -34,6 +34,10 @@
       height: 44rem;
     }
 
+    @include respond(tablet) {
+      height: 51.2rem;
+    }
+
     @include respond(phone) {
       height: 25rem;
     }
