--- a/packages/navigate-theme/src/styles/components/_get-there.scss
+++ b/packages/navigate-theme/src/styles/components/_get-there.scss
@@ -1,9 +1,6 @@
 .get-there {
   display: grid;
   grid-template-rows: 7rem min-content min-content;
-
-  // font-size: 1.6rem;
-  // color: $color-grey-dark-2;
   @extend .paragraph;
 
   @include respond(laptop) {
@@ -11,7 +8,7 @@
   }
 
   @include respond(tablet) {
-    grid-template-rows: 7rem min-content 4rem;
+    grid-template-rows: 7rem min-content min-content;
   }
 
   @include respond(phone) {
